src/test/deca/syntax/invalid/without_class/main_with_parenthesis.deca
// Description:
//    Error in main block   
//
// Result:
//    Syntax Error
//    line 8

(
    int a = 0;
    return a;
)